<resources>
    <string name="app_name">Onko</string>

    <string name="email">Имейл</string>
    <string name="password">Парола</string>
    <string name="login">Вход</string>
    <string name="feedback">Обратна връзка</string>
    <string name="log_out">Изход</string>
    <string name="connection_problem">Проблем с връзката</string>
    <string name="wrong_email_or_password">Грешен имейл или парола</string>
    <string name="enter_your_email">Въведете вашия имейл</string>
    <string name="enter_your_password">Въведете вашата парола</string>
    <string name="enter_valid_email">Въведете валиден имейл</string>
    <string name="first_name">Име</string>
    <string name="last_name">Фамилия</string>
    <string name="repeat_password">Повторете паролата</string>
    <string name="phone_number">Телефонен номер</string>
    <string name="sign_up">Регистрирай се</string>
    <string name="registration_is_successfull">Регистрацията е успешна</string>
    <string name="registration_error">Грешка при регистрация</string>
    <string name="mkb_groups">Групи заболявания</string>
    <string name="you_have_added_mkb_successful">Добавихте вашето заболяване успешно</string>
    <string name="you_couldnt_add_mkb">Невъзможно е да добавите заболяване</string>
    <string name="you_have_deleted_mkb_successful">Изтрихте вашето заболяване успешно</string>
    <string name="you_havent_deleted_mkb_seccessful">Не успяхте да изтриете вашето заболяване</string>
    <string name="delete_mkb">Изтриване на заболяване?</string>
    <string name="are_you_sure_you_want_to_delete_this_mkb">Сигурни ли сте, че искате да изтриете заболяването?</string>
    <string name="examinations">Прегледи</string>
    <string name="doctors">Доктори</string>
    <string name="examinations_dates">Дати на прегледи</string>
    <string name="past">Изминали прегледи</string>
    <string name="predicted_examinations">Бъдещи прегледи</string>
    <string name="there_is_no_saved_dates">Няма запазени дати</string>
    <string name="log_in">Вход</string>
    <string name="add_date">Добави дата</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email…</string>
    <string name="send">Изпрати</string>
    <string name="please_enter_email">Моля, попълнете вашия имейл!</string>
    <string name="invalid_email">Невалиден имейл!</string>
    <string name="please_enter_password">Моля, въведете парола!</string>
    <string name="please_repeat_password">Моля, въведете повторно вашата парола!</string>
    <string name="passwords_are_not_equals">Паролите не съвпадат!</string>
    <string name="please_enter_first_name">Моля, въведете името си!</string>
    <string name="please_enter_last_name">Моля, въведете фамилията си!</string>
    <string name="please_enter_phone_number">Моля, въведете телефонния си номер!</string>
    <string name="invalid_phone_number">Невалиден телефонен номер!</string>
    <string name="fingerprint_login">Вход с пръстов отпечатък</string>
    <string name="use_your_fingerprint_for_faster">Използвайте пръстовия си отпечатък за по-бърз и лесен вход. Потвърдете, за да продължите.</string>
    <string name="touch_sensor">Докоснете четеца </string>
    <string name="cancel">Отказ</string>
    <string name="device_settings_changed">Настройките на Вашето устройство са променени.</string>
    <string name="confirm_identity_again">Моля, потвърдете пръстовия си отпечатък отново, като го поставите на четеца.</string>
    <string name="fingerprint_not_recognized">Пръстовият отпечатък не е разпознат. Опитайте отново.</string>
    <string name="fingerprint_recognized">Пръстов отпечатък разпознат.</string>
    <string name="fingerprint">Пръстов отпечатък</string>
    <string name="confirm_fingerprint_to_continue">Потвърдете пръстовия си отпечатък, за да продължите</string>
    <string name="use_login_code">Използвайте код за достъп</string>
    <string name="type_account">Вид акаунт</string>
    <string name="doctor_type">Специалист</string>
    <string name="please_choose_client_type">Моля, изберете вид на акаунта</string>
    <string name="account_type_1">Доктор</string>
    <string name="account_type_2">Пациент</string>
    <string name="please_choose_doctor_type">Изберете специалист</string>
    <string name="oops_something_went_wrong">Възникна грешка!</string>
    <string name="monday">Понеделник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Сряда</string>
    <string name="thursday">Четвъртък</string>
    <string name="friday">Петък</string>
    <string name="saturday">Събота</string>
    <string name="sunday">Неделя</string>
    <string name="to_">до</string>
    <string name="working_time">Работно време</string>
    <string name="reservations">Записани часове</string>
    <string name="free_hours">Свободни часове</string>
    <string name="onco_channel">Onko Channel</string>
    <string name="reservation_confirmation">Потвърждавате ли резервацията?</string>
    <string name="date">Дата:</string>
    <string name="doctor_type_colons">Специалист:</string>
    <string name="doctor_name_colons">Име на доктора:</string>
    <string name="customer_name">Име на пациента:</string>
    <string name="confirm">Потвърждавам</string>
    <string name="confirm_">Потвърди</string>
    <string name="reject">Откажи</string>
    <string name="res_status_1">Нов</string>
    <string name="res_status_2">Очаква\nпотвърждение</string>
    <string name="res_status_3">Одобрен</string>
    <string name="res_status_4">Отказан</string>
    <string name="res_status_5">Преминат</string>
    <string name="next">Предстоящи</string>
    <string name="previous">Изминали</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
