<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android               ="http://schemas.android.com/apk/res/android"
    xmlns:tools                 ="http://schemas.android.com/tools"
    android:layout_width        ="match_parent"
    android:layout_height       ="match_parent"
    tools:context               ="eu.mobile.onko.activities.RegistrationActivity">

    <ScrollView
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        android:layout_above    ="@+id/sign_up_btn">

        <LinearLayout
            android:layout_width            ="match_parent"
            android:layout_height           ="0dp"
            android:paddingBottom           ="40dp"
            android:orientation             ="vertical"
            android:paddingLeft             ="16dp"
            android:paddingRight            ="16dp">

            <TextView
                android:id              ="@+id/title_txt"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="15dp"
                android:padding         ="15dp"
                android:gravity         ="center"
                android:textSize        ="30sp"
                android:text            ="@string/sign_up"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/email_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:inputType       ="textEmailAddress"
                    android:hint            ="@string/email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/password_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType       ="textPassword"
                    android:hint            ="@string/password"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/repeat_password_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType       ="textPassword"
                    android:hint            ="@string/repeat_password"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/first_name_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType       ="text"
                    android:hint            ="@string/first_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/last_name_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType       ="text"
                    android:hint            ="@string/last_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/phone_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType       ="phone"
                    android:hint            ="@string/phone_number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id              ="@+id/client_type_layout"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/client_type_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable       ="false"
                    android:inputType       ="text"
                    android:hint            ="@string/type_account"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id              ="@+id/doctorLayout"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility      ="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id              ="@+id/doctor_edt"
                    android:layout_width    ="match_parent"
                    android:layout_height   ="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable       ="false"
                    android:inputType       ="text"
                    android:hint            ="@string/doctor_type"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>
    
    <Button
        style           ="@style/MainButton"
        android:id      ="@+id/sign_up_btn"
        android:text    ="@string/sign_up"/>

    <include layout="@layout/progress_layout"/>

</RelativeLayout>
