<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    tools:context           ="eu.mobile.onko.activities.LoginActivity">

    <LinearLayout
        android:layout_width            ="match_parent"
        android:layout_height           ="wrap_content"
        android:layout_centerInParent   ="true"
        android:orientation             ="vertical"
        android:paddingLeft             ="16dp"
        android:paddingRight            ="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id              ="@+id/email_edt"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:inputType       ="textEmailAddress"
                android:hint            ="@string/email"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id              ="@+id/password_edt"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType       ="textPassword"
                android:hint            ="@string/password"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id                          ="@+id/login_btn"
        android:layout_width                ="match_parent"
        android:layout_height               ="wrap_content"
        android:layout_alignParentBottom    ="true"
        android:background                  ="@color/colorPrimary"
        android:text                        ="@string/login"
        android:textColor                   ="@android:color/white"
        android:textSize                    ="18sp" />

</RelativeLayout>
